ulwazi/theme/ulwazi/static/css/default.css
/* .more-links-dropdown {
    display: none;
    overflow-x: visible;
    height: 0;
    z-index: 55;
    padding: 0;
    position: relative;
    list-style: none;
    margin-bottom: 0;
    margin-top: 0;
} */

.more-links-dropdown {
    display: none;
    padding: 0rem;
    line-height: 1.5rem;
    position: relative;
    color: white;
    padding-bottom: 0.5rem;
}

.nav-more-links::after {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='%23111' d='M8.187 11.748l6.187-6.187-1.06-1.061-5.127 5.127L3.061 4.5 2 5.561z'/%3E%3C/svg%3E");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    content: "";
    display: block;
    filter: invert(100%);
    height: 1rem;
    pointer-events: none;
    position: absolute;
    right: 1rem;
    text-indent: calc(100% + 10rem);
    top: calc(1rem + 0.25rem);
    width: 1rem;
}

.show {
    display: block;
}

.right-container {
    display: flex;
    float: right;
    gap: .5rem;
    margin-bottom: 1rem;
    margin-left: 1rem;
    margin-top: 1.5rem;
}

.p-table-of-contents__header {
    font-variant-caps: all-small-caps;
    font-variant-numeric: oldstyle-nums;
    letter-spacing: .05em;
    margin-bottom: .625rem;
    font-weight: 550;
    font-size: 1rem;
    line-height: 1.5rem;
    margin-top: 0;
    padding-top: .375rem;
}

.p-side-naigation__heading {
    padding-left: 1.5rem;
    display: flex;
    padding-bottom: .25rem;
    padding-right: 1rem;
    padding-top: .25rem;
    text-decoration: none;
    box-sizing: inherit;
    font-size: 1rem;
    font-weight: 550;
    line-height: 1.5rem;
}

p.caption {
    margin-bottom: .125rem;
}

li[class*=' toctree'],li[class^='toctree'] {
    list-style: none;
    padding-left: .5rem;
    list-style: none;

}

ul {
    padding-left: 0rem;
}

a.headerlink {
    color: transparent;
}
.icon {
    --readthedocs-font-size: 0.725rem;
    --readthedocs-flyout-header-font-size: 0.845rem;
    --readthedocs-flyout-font-size: 0.725rem;
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
    font-weight: 400;
    scrollbar-color: rgb(135, 135, 135) transparent;
    font-size: 0.875rem;
    list-style: none;
    cursor: pointer;
    user-select: none;
    display: inline-block;
    height: 32px;
    width: 32px;
    color: rgb(17, 17, 17);
}

.icon:hover {
    background-color:rgb(242.25, 242.25, 242.25);
}

/* .icon.current {
    transform: rotate(90deg);
} */

svg {
    display: inline-block;
    padding-top: 4px;
    padding-left: 4px;
    height: 28px;
    width: 28px;
    color: rgb(17, 17, 17);
}

.visually-hidden {
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0,0,0,0) !important;
    white-space: nowrap !important;
    border: 0 !important;
    color: rgb(17, 17, 17);
    background: rgb(255, 255, 255);
    display: none !important;
}

/* .p-side-navigation__item.hidden{
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0,0,0,0) !important;
    white-space: nowrap !important;
    border: 0 !important;
    color: rgb(17, 17, 17);
    background: rgb(255, 255, 255);
    display: none !important;
} */

/* .p-side-navigation__item:hover {
    background-color: rgb(242.25, 242.25, 242.25);
} */


.toctree-checkbox {
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0,0,0,0) !important;
    white-space: nowrap !important;
    border: 0 !important;
    color: rgb(17, 17, 17);
    background: rgb(255, 255, 255);
}

.toctree-checkbox ~ ul {
    display: none;
  }
  
/* .toctree-checkbox ~ label .icon svg {
    transform: rotate(90deg);
} */
  
.toctree-checkbox:checked ~ ul {
    display: block;
}
  
.toctree-checkbox:checked ~ label .icon svg {
    transform: rotate(90deg);
}

.p-side-navigation__item-content{
    display: flex;
    flex-flow: row;
    align-items: center;
}

/* .p-side-navigation__item-content:hover {
    background-color: rgb(242.25, 242.25, 242.25);
} */

.p-side-navigation__item-content a {
    flex-grow: 1;
    white-space: nowrap;
} 

.p-side-navigation__item-content a :hover {
    background-color: rgb(242.25, 242.25, 242.25);
} 

/* Wrap only the <a>, <input>, and <label> in a flex container */
.p-side-navigation__item > a,
.p-side-navigation__item > input,
.p-side-navigation__item > label {
    display: inline-flex;
    align-items: bottom;
    gap: 5px;
    white-space: nowrap;
}

